# InvestmentBot

./: .gitignore  MarketFeeder.py  README.md  ValueAverageTradingBot.py  define.py  main.py  pyproject.toml  utils.py
data/: balance.csv
investmentbot/: Excel.py  MarketFeeder.py  ValueAverageTradingBot.py  define.py  logger.py  main.py  utils.py
