[project]
name = "investmentbot"
version = "0.1.0"
description = ""
authors = [
    {name = "taiwaiho624"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "yfinance (>=0.2.61,<0.3.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
investmentbot = "investmentbot.main:main"